--- a/join.html
+++ b/join.html
@@ -62,7 +62,21 @@
       padding: 0;
       background: #f5f7fa;
     }
-
+.group-card img.group-logo {
+      width: 24px;
+      height: 24px;
+      border-radius: 50%;
+      margin-right: 8px;
+      vertical-align: middle;
+    }
+    .group-card h3 {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 1.2rem;
+    }
+  </style>
+</div>
     .navbar {
       background: #2d2e52;
       padding: 25px 20px 10px;
