--- a/join.html
+++ b/join.html
@@ -56,6 +56,72 @@
 
   <!-- Styles -->
   <style>
+  .container {
+    max-width: 800px;
+    margin: auto;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #333;
+  }
+
+  .group-card {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    background-color: #f9f9f9;
+    padding: 14px;
+    margin-bottom: 16px;
+    border-radius: 12px;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+  }
+
+  .group-card img {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid #25D366;
+  }
+
+  .group-card-content {
+    flex: 1;
+  }
+
+  .group-card-content h3 {
+    margin: 0;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    color: #222;
+  }
+
+  .group-card-content p {
+    margin: 4px 0;
+    color: #555;
+    font-size: 0.9rem;
+  }
+
+  .join-btn {
+    display: inline-block;
+    margin-top: 6px;
+    padding: 6px 12px;
+    font-size: 0.85rem;
+    background-color: #25D366;
+    color: white;
+    border-radius: 6px;
+    text-decoration: none;
+    transition: background 0.3s ease;
+  }
+
+  .join-btn:hover {
+    background-color: #128C7E;
+  }    
     body {
       font-family: 'Poppins', sans-serif;
       margin: 0;
@@ -207,69 +273,88 @@
   </nav>
 
   <div class="container">
-    <h2>🔥 Join JokerLudo WhatsApp Groups</h2>
+  <h2>🔥 Join JokerLudo WhatsApp Groups</h2>
 
-   <div class="container">
-    <h2>🔥 Join JokerLudo WhatsApp Groups</h2>
-
-    <div class="group-card">
-      <img src="https://i.pinimg.com/1200x/63/ad/27/63ad27d5a49cd3cd624b414ce0bfbd9a.jpg" alt="Group Icon">
+  <div class="group-card">
+    <img src="https://i.pinimg.com/1200x/63/ad/27/63ad27d5a49cd3cd624b414ce0bfbd9a.jpg" alt="Group Icon">
+    <div class="group-card-content">
       <h3>💥 Joker Ludo Group 1</h3>
       <p>Real cash games | Instant payment | Fair play</p>
       <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn" target="_blank">Join Now</a>
     </div>
-     <div class="group-card">
-      <img src="https://i.pinimg.com/736x/d8/45/db/d845db0b8f1247949d755c6f623570ea.jpg" alt="Group Icon">
-      <h3>💥girls-ludo-group-links</h3>
+  </div>
+
+  <div class="group-card">
+    <img src="https://i.pinimg.com/736x/d8/45/db/d845db0b8f1247949d755c6f623570ea.jpg" alt="Group Icon">
+    <div class="group-card-content">
+      <h3>💥 girls-ludo-group-links</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="https://ludogrouplink.com/girls-ludo-group-links.html" class="join-btn" target="_blank">Join Now</a>
     </div>
-    <div class="group-card">
-      <img src="https://i.pinimg.com/736x/7e/24/77/7e24774bdc54fb67b344561462775228.jpg" alt="Group Icon">
-      <h3>💥Whatsapp-ludo-group-link-joker</h3>
+  </div>
+
+  <div class="group-card">
+    <img src="https://i.pinimg.com/736x/7e/24/77/7e24774bdc54fb67b344561462775228.jpg" alt="Group Icon">
+    <div class="group-card-content">
+      <h3>💥 Whatsapp-ludo-group-link-joker</h3>
       <p>Daily matches | Trusted admin | No cheating</p>
       <a href="https://ludogrouplink.com/Whatsapp-ludo-group-link-joker.html" class="join-btn" target="_blank">Join Now</a>
     </div>
+  </div>
 
-    <div class="group-card">
-      <img src="https://i.pinimg.com/1200x/f1/04/75/f10475249b015215419690928bcc99fe.jpg" alt="Group Icon">
+  <div class="group-card">
+    <img src="https://i.pinimg.com/1200x/f1/04/75/f10475249b015215419690928bcc99fe.jpg" alt="Group Icon">
+    <div class="group-card-content">
       <h3>💥 earning-ludo-group</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="https://ludogrouplink.com/earning-ludo-groups.html" class="join-btn" target="_blank">Join Now</a>
     </div>
-     <div class="group-card">
-      <img src="https://i.pinimg.com/1200x/75/54/0a/75540a696a361cfd3672937c8f59f4dd.jpg" alt="Group Icon">
-      <h3>💥joker-ludo-whatsapp-group</h3>
+  </div>
+
+  <div class="group-card">
+    <img src="https://i.pinimg.com/1200x/75/54/0a/75540a696a361cfd3672937c8f59f4dd.jpg" alt="Group Icon">
+    <div class="group-card-content">
+      <h3>💥 joker-ludo-whatsapp-group</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="https://ludogrouplink.com/joker-ludo-whatsapp-group.html" class="join-btn" target="_blank">Join Now</a>
     </div>
-     <div class="group-card">
-      <img src="https://i.pinimg.com/736x/a9/1a/53/a91a534388d5d8f812619216012fa1c8.jpg" alt="Group Icon">
-      <h3>💥ludo whatsapp group link</h3>
+  </div>
+
+  <div class="group-card">
+    <img src="https://i.pinimg.com/736x/a9/1a/53/a91a534388d5d8f812619216012fa1c8.jpg" alt="Group Icon">
+    <div class="group-card-content">
+      <h3>💥 ludo whatsapp group link</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="https://ludogrouplink.com/ludo%20whatsapp%20group%20link.html" class="join-btn" target="_blank">Join Now</a>
     </div>
-     <div class="group-card">
-      <img src="https://i.pinimg.com/736x/90/80/dd/9080dd4178a03ee0b3a5c41520eee039.jpg" alt="Group Icon">
+  </div>
+
+  <div class="group-card">
+    <img src="https://i.pinimg.com/736x/90/80/dd/9080dd4178a03ee0b3a5c41520eee039.jpg" alt="Group Icon">
+    <div class="group-card-content">
       <h3>💥 ludo-king-whatsapp-group-links</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="https://ludogrouplink.com/ludo-king-whatsapp-group-links.html" class="join-btn" target="_blank">Join Now</a>
     </div>
-     <div class="group-card">
-      <img src="https://i.pinimg.com/736x/5a/55/15/5a55159362d3450ca040666a41f82c56.jpg" alt="Group Icon">
+  </div>
+
+  <div class="group-card">
+    <img src="https://i.pinimg.com/736x/5a/55/15/5a55159362d3450ca040666a41f82c56.jpg" alt="Group Icon">
+    <div class="group-card-content">
       <h3>💥 Dubai-ludo-group</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
       <a href="https://ludogrouplink.com/earning-ludo-groups.html" class="join-btn" target="_blank">Join Now</a>
     </div>
+  </div>
 
-    <div class="group-card">
-      <img src="https://i.pinimg.com/736x/94/e2/ee/94e2ee9b7fa49f330d329aa0a70739e2.jpg" alt="Group Icon">
+  <div class="group-card">
+    <img src="https://i.pinimg.com/736x/94/e2/ee/94e2ee9b7fa49f330d329aa0a70739e2.jpg" alt="Group Icon">
+    <div class="group-card-content">
       <h3>💥 Ludo Whatsapp Group Link</h3>
       <p>24/7 Ludo games | Quick entry | Real players only</p>
-      <a href="  https://ludogrouplink.com/ludo-whatsapp-group-links.html#" class="join-btn" target="_blank">Join Now</a>
+      <a href="https://ludogrouplink.com/ludo-whatsapp-group-links.html" class="join-btn" target="_blank">Join Now</a>
     </div>
-
-    <!-- More group-cards will follow with image additions -->
+  </div>
 </div>
 
   <footer>
