--- a/join.html
+++ b/join.html
@@ -106,7 +106,19 @@
     color: #555;
     font-size: 0.9rem;
   }
+    .tags {
+      margin-top: 10px;
+      font-size: 13px;
+      color: #666;
+    }
 
+    .tags span {
+      background-color: #f1f1f1;
+      border-radius: 4px;
+      padding: 3px 7px;
+      margin: 2px;
+      display: inline-block;
+    }
   .join-btn {
     display: inline-block;
     margin-top: 6px;
@@ -275,88 +287,156 @@
   <div class="container">
   <h2>🔥 Join JokerLudo WhatsApp Groups</h2>
 
-  <div class="group-card">
-    <img src="https://i.pinimg.com/1200x/63/ad/27/63ad27d5a49cd3cd624b414ce0bfbd9a.jpg" alt="Group Icon">
-    <div class="group-card-content">
-      <h3>💥 Joker Ludo Group 1</h3>
-      <p>Real cash games | Instant payment | Fair play</p>
-      <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn" target="_blank">Join Now</a>
+    <!-- Joker Ludo Group 1 -->
+    <div class="group-card">
+      <img src="https://i.pinimg.com/1200x/63/ad/27/63ad27d5a49cd3cd624b414ce0bfbd9a.jpg" alt="Joker Ludo Group 1">
+      <div class="group-card-content">
+        <h3>💥 Joker Ludo Group 1</h3>
+        <p>Real cash games | Instant payment | Fair play</p>
+        <a href="https://chat.whatsapp.com/FNotwtBMa27JSlQBrSRz2p?mode=ac_c" class="join-btn" target="_blank">Join Now</a>
+        <div class="tags">
+          <span>joker ludo</span><span>cash ludo group</span><span>ludo whatsapp link</span>
+          <span>earn money playing ludo</span><span>trusted ludo group</span>
+          <span>real ludo games</span><span>instant withdraw</span>
+          <span>Ludo King </span><span>play and earn</span><span>India ludo group</span>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="group-card">
-    <img src="https://i.pinimg.com/736x/d8/45/db/d845db0b8f1247949d755c6f623570ea.jpg" alt="Group Icon">
-    <div class="group-card-content">
-      <h3>💥 girls-ludo-group-links</h3>
-      <p>24/7 Ludo games | Quick entry | Real players only</p>
-      <a href="https://ludogrouplink.com/girls-ludo-group-links.html" class="join-btn" target="_blank">Join Now</a>
+    <!-- Girls Ludo Group Links -->
+    <div class="group-card">
+      <img src="https://i.pinimg.com/736x/d8/45/db/d845db0b8f1247949d755c6f623570ea.jpg" alt="Girls Ludo Group Links">
+      <div class="group-card-content">
+        <h3>💥 Girls Ludo Group Links</h3>
+        <p>24/7 Ludo games | Quick entry | Real players only</p>
+        <a href="https://ludogrouplink.com/girls-ludo-group-links.html" class="join-btn" target="_blank">Join Now</a>
+        <div class="tags">
+          <span>girls ludo group</span><span>female players ludo</span><span>girls whatsapp ludo</span>
+          <span>ludo for girls</span><span>female earning group</span>
+          <span>girl gamer group</span><span>24x7 ludo play</span>
+          <span>girls ludo links</span><span>real girls group</span>
+          <span>india girl ludo</span>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="group-card">
-    <img src="https://i.pinimg.com/736x/7e/24/77/7e24774bdc54fb67b344561462775228.jpg" alt="Group Icon">
-    <div class="group-card-content">
-      <h3>💥 Whatsapp-ludo-group-link-joker</h3>
-      <p>Daily matches | Trusted admin | No cheating</p>
-      <a href="https://ludogrouplink.com/Whatsapp-ludo-group-link-joker.html" class="join-btn" target="_blank">Join Now</a>
+    <!-- Whatsapp Ludo Group Link Joker -->
+    <div class="group-card">
+      <img src="https://i.pinimg.com/736x/7e/24/77/7e24774bdc54fb67b344561462775228.jpg" alt="Whatsapp Ludo Group Link Joker">
+      <div class="group-card-content">
+        <h3>💥 Whatsapp Ludo Group Link Joker</h3>
+        <p>Daily matches | Trusted admin | No cheating</p>
+        <a href="https://ludogrouplink.com/Whatsapp-ludo-group-link-joker.html" class="join-btn" target="_blank">Join Now</a>
+        <div class="tags">
+          <span>joker whatsapp ludo</span><span>daily ludo matches</span>
+          <span>trusted admin group</span><span>fair ludo play</span>
+          <span>join joker group</span><span>ludo earning group</span>
+          <span>whatsapp group link ludo</span><span>no cheating group</span>
+          <span>real ludo players</span><span>india ludo games</span>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="group-card">
-    <img src="https://i.pinimg.com/1200x/f1/04/75/f10475249b015215419690928bcc99fe.jpg" alt="Group Icon">
-    <div class="group-card-content">
-      <h3>💥 earning-ludo-group</h3>
-      <p>24/7 Ludo games | Quick entry | Real players only</p>
-      <a href="https://ludogrouplink.com/earning-ludo-groups.html" class="join-btn" target="_blank">Join Now</a>
+    <!-- Earning Ludo Group -->
+    <div class="group-card">
+      <img src="https://i.pinimg.com/1200x/f1/04/75/f10475249b015215419690928bcc99fe.jpg" alt="Earning Ludo Group">
+      <div class="group-card-content">
+        <h3>💥 Earning Ludo Group</h3>
+        <p>Real players | No bots | Real-time payments</p>
+        <a href="https://ludogrouplink.com/earning-ludo-groups.html" class="join-btn" target="_blank">Join Now</a>
+        <div class="tags">
+          <span>earning ludo group</span><span>ludo payment fast</span>
+          <span>real players only</span><span>instant ludo cash</span>
+          <span>online ludo earning</span><span>trusted ludo links</span>
+          <span>play ludo earn</span><span>daily earning group</span>
+          <span>game money group</span><span>india ludo cash</span>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="group-card">
-    <img src="https://i.pinimg.com/1200x/75/54/0a/75540a696a361cfd3672937c8f59f4dd.jpg" alt="Group Icon">
-    <div class="group-card-content">
-      <h3>💥 joker-ludo-whatsapp-group</h3>
-      <p>24/7 Ludo games | Quick entry | Real players only</p>
-      <a href="https://ludogrouplink.com/joker-ludo-whatsapp-group.html" class="join-btn" target="_blank">Join Now</a>
+    <!-- Joker Ludo WhatsApp Group -->
+    <div class="group-card">
+      <img src="https://i.pinimg.com/1200x/75/54/0a/75540a696a361cfd3672937c8f59f4dd.jpg" alt="Joker Ludo WhatsApp Group">
+      <div class="group-card-content">
+        <h3>💥 Joker Ludo WhatsApp Group</h3>
+        <p>24/7 Ludo games | Quick entry | Real players only</p>
+        <a href="https://ludogrouplink.com/joker-ludo-whatsapp-group.html" class="join-btn" target="_blank">Join Now</a>
+        <div class="tags">
+          <span>joker ludo whatsapp</span><span>24x7 ludo group</span>
+          <span>real players group</span><span>instant join</span>
+          <span>trusted ludo admins</span><span>join games now</span>
+          <span>play win cash</span><span>india ludo whatsapp</span>
+          <span>daily matches</span><span>secure ludo group</span>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="group-card">
-    <img src="https://i.pinimg.com/736x/a9/1a/53/a91a534388d5d8f812619216012fa1c8.jpg" alt="Group Icon">
-    <div class="group-card-content">
-      <h3>💥 ludo whatsapp group link</h3>
-      <p>24/7 Ludo games | Quick entry | Real players only</p>
-      <a href="https://ludogrouplink.com/ludo%20whatsapp%20group%20link.html" class="join-btn" target="_blank">Join Now</a>
+    <!-- Ludo WhatsApp Group Link -->
+    <div class="group-card">
+      <img src="https://i.pinimg.com/736x/a9/1a/53/a91a534388d5d8f812619216012fa1c8.jpg" alt="Ludo WhatsApp Group Link">
+      <div class="group-card-content">
+        <h3>💥 Ludo WhatsApp Group Link</h3>
+        <p>24/7 Ludo games | Quick entry | Real players only</p>
+        <a href="https://ludogrouplink.com/ludo%20whatsapp%20group%20link.html" class="join-btn" target="_blank">Join Now</a>
+        <div class="tags">
+          <span>ludo whatsapp group link</span><span>join ludo group</span>
+          <span>play ludo online</span><span>real player group</span>
+          <span>trusted link group</span><span>daily ludo link</span>
+          <span>instant entry</span><span>earn from ludo</span>
+          <span>real cash games</span><span>India ludo link</span>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="group-card">
-    <img src="https://i.pinimg.com/736x/90/80/dd/9080dd4178a03ee0b3a5c41520eee039.jpg" alt="Group Icon">
-    <div class="group-card-content">
-      <h3>💥 ludo-king-whatsapp-group-links</h3>
-      <p>24/7 Ludo games | Quick entry | Real players only</p>
-      <a href="https://ludogrouplink.com/ludo-king-whatsapp-group-links.html" class="join-btn" target="_blank">Join Now</a>
+    <!-- Ludo King WhatsApp Group Links -->
+    <div class="group-card">
+      <img src="https://i.pinimg.com/736x/90/80/dd/9080dd4178a03ee0b3a5c41520eee039.jpg" alt="Ludo King WhatsApp Group Links">
+      <div class="group-card-content">
+        <h3>💥 Ludo‑King WhatsApp Group Links</h3>
+        <p>24/7 Ludo games | Quick entry | Real players only</p>
+        <a href="https://ludogrouplink.com/ludo-king-whatsapp-group-links.html" class="join-btn" target="_blank">Join Now</a>
+        <div class="tags">
+          <span>ludo king group</span><span>king whatsapp link</span>
+          <span>daily ludo king</span><span>real king players</span>
+          <span>trusted king link</span><span>earn via ludo king</span>
+          <span>play king online</span><span>king group india</span>
+          <span>instant join</span><span>fair ludo king</span>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="group-card">
-    <img src="https://i.pinimg.com/736x/5a/55/15/5a55159362d3450ca040666a41f82c56.jpg" alt="Group Icon">
-    <div class="group-card-content">
-      <h3>💥 Dubai-ludo-group</h3>
-      <p>24/7 Ludo games | Quick entry | Real players only</p>
-      <a href="https://ludogrouplink.com/earning-ludo-groups.html" class="join-btn" target="_blank">Join Now</a>
+    <!-- Dubai Ludo Group -->
+    <div class="group-card">
+      <img src="https://i.pinimg.com/736x/5a/55/15/5a55159362d3450ca040666a41f82c56.jpg" alt="Dubai Ludo Group">
+      <div class="group-card-content">
+        <h3>💥 Dubai‑Ludo‑Group</h3>
+        <p>24/7 Ludo games | Quick entry | Real players only</p>
+        <a href="https://ludogrouplink.com/earning-ludo-groups.html" class="join-btn" target="_blank">Join Now</a>
+        <div class="tags">
+          <span>Dubai ludo group</span><span>UAE ludo games</span><span>Dubai players ludo</span>
+          <span>24x7 ludo dubai</span><span>join dubai ludo</span><span>real cash dubai</span>
+          <span>international ludo</span><span>trusted dubai group</span>
+          <span>Dubai ludo links</span><span>earn from ludo dubai</span>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <div class="group-card">
-    <img src="https://i.pinimg.com/736x/94/e2/ee/94e2ee9b7fa49f330d329aa0a70739e2.jpg" alt="Group Icon">
-    <div class="group-card-content">
-      <h3>💥 Ludo Whatsapp Group Link</h3>
-      <p>24/7 Ludo games | Quick entry | Real players only</p>
-      <a href="https://ludogrouplink.com/ludo-whatsapp-group-links.html" class="join-btn" target="_blank">Join Now</a>
+    <!-- Ludo WhatsApp Group Links (duplicate) -->
+    <div class="group-card">
+      <img src="https://i.pinimg.com/736x/94/e2/ee/94e2ee9b7fa49f330d329aa0a70739e2.jpg" alt="Ludo WhatsApp Group Links">
+      <div class="group-card-content">
+        <h3>💥 Ludo WhatsApp Group Link</h3>
+        <p>24/7 Ludo games | Quick entry | Real players only</p>
+        <a href="https://ludogrouplink.com/ludo-whatsapp-group-links.html" class="join-btn" target="_blank">Join Now</a>
+        <div class="tags">
+          <span>ludo whatsapp group links</span><span>group link ludo</span>
+          <span>24/7 ludo group</span><span>real players only</span>
+          <span>trusted group link</span><span>earn money ludo</span>
+          <span>daily matches</span><span>join now</span><span>India ludo link</span>
+          <span>WhatsApp ludo links</span>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-
   <footer>
     <div class="footer-links">
       <a href="index.html">Home</a>
