--- a/join.html
+++ b/join.html
@@ -201,6 +201,21 @@
       margin-bottom: 30px;
     }
 
+     .hero {
+      text-align: center;
+      padding: 50px 20px;
+      background: linear-gradient(to right, #ffe57f, #ffc107);
+    }
+    .hero h1 {
+      font-size: 32px;
+      margin-bottom: 15px;
+    }
+    .hero p {
+      font-size: 18px;
+      margin-bottom: 25px;
+      max-width: 700px;
+      margin: 0 auto 25px auto;
+      line-height: 1.5;
     .group-card {
       background: #ffffff;
       border: 1px solid #ddd;
@@ -437,6 +452,9 @@
         </div>
       </div>
     </div>
+     <section class="hero">
+    <a href="addgroup.html" class="join-btn" style="background: #ff5722;">Add Your Whatsapp/Telegram Ludo Group Link</a>
+  </section>
   <footer>
     <div class="footer-links">
       <a href="index.html">Home</a>
