--- a/join.html
+++ b/join.html
@@ -210,21 +210,34 @@
       font-size: 32px;
       margin-bottom: 15px;
     }
-    .hero p {
-      font-size: 18px;
-      margin-bottom: 25px;
-      max-width: 700px;
-      margin: 0 auto 25px auto;
-      line-height: 1.5;
-    .group-card {
-      background: #ffffff;
-      border: 1px solid #ddd;
-      border-radius: 12px;
-      padding: 20px;
-      margin-bottom: 20px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.05);
-      transition: transform 0.2s;
-    }
+  .hero {
+  background: none; /* or background-color: white; */
+  padding: 20px 0;
+}
+
+.hero h1 {
+  font-size: 32px;
+  margin-bottom: 15px;
+}
+
+.hero p {
+  font-size: 18px;
+  margin-bottom: 25px;
+  max-width: 700px;
+  margin: 0 auto 25px auto;
+  line-height: 1.5;
+}
+
+.group-card {
+  background: #ffffff;
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.05);
+  transition: transform 0.2s;
+}
+
 
     .group-card:hover {
       transform: translateY(-3px);
