--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <meta name="keywords" content="ludo whatsapp group link, jokerludo, earn money ludo, ludo group, whatsapp ludo group, join ludo whatsapp, trusted ludo groups, verified ludo whatsapp links, real cash ludo group, fastwin ludo king group" />
   <meta name="author" content="JokerLudo Group" />
   <meta name="robots" content="index, follow" />
+  
+  <!-- ✅ Google AdSense Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
+     crossorigin="anonymous"></script>
 
   <!-- Favicon -->
   <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
