--- a/Whatsapp-ludo-group-link-joker.html
+++ b/Whatsapp-ludo-group-link-joker.html
@@ -19,6 +19,10 @@
   <meta property="og:site_name" content="JokerLudo" />
   <meta property="og:image" content="https://ludogrouplink.com/images/banner.jpg" />
 
+    <!-- ✅ Google AdSense Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
+     crossorigin="anonymous"></script>
+  
   <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
   {
