--- a/Whatsappludogrouplink.html
+++ b/Whatsappludogrouplink.html
@@ -7,6 +7,9 @@
     <meta name="description" content="Find the best and most active WhatsApp Ludo group links including Yalla Ludo, Ludo Star, betting, Telugu, Titan, and more. Join real-time Ludo WhatsApp groups now." />
     <meta name="keywords" content="whatsapp ludo group link, yalla ludo group, zupee ludo whatsapp group, ludo king betting group, telugu ludo whatsapp group, titan ludo whatsapp, coin seller whatsapp group" />
     <link rel="canonical" href="https://ludogrouplink.com/Whatsappludogrouplink" />
+      <!-- ✅ Google AdSense Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
+     crossorigin="anonymous"></script>
     <style>
       body {
         font-family: Arial, sans-serif;
