--- a/girls-ludo-group-links.html
+++ b/girls-ludo-group-links.html
@@ -11,6 +11,9 @@
   <meta property="og:url" content="https://ludogrouplink.com/girls-ludo-group-links" />
   <meta property="og:type" content="website" />
   <title>JOKER LUDO GIRLS Group</title>
+    <!-- ✅ Google AdSense Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
+     crossorigin="anonymous"></script>
   <style>
     body {
       margin: 0;
