--- a/ludo-group-link.html
+++ b/ludo-group-link.html
@@ -25,7 +25,10 @@
 
   <!-- Google Site Verification -->
   <meta name="google-site-verification" content="google-site-verification-code-here" />
-
+  <!-- ✅ Google AdSense Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
+     crossorigin="anonymous"></script>
+  
   <!-- Google Analytics (G-EZF7SRX6EJ) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZF7SRX6EJ"></script>
   <script>
