Update Nag Panchami aur Sawan special.html

--- a/Nag Panchami aur Sawan special.html
+++ b/Nag Panchami aur Sawan special.html
@@ -9,13 +9,13 @@
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background: #f2f2f2;
+      background: #fdfdfd;
       color: #333;
     }
 
     header {
-      background: #ffe6e6;
-      padding: 2rem 1rem;
+      background: linear-gradient(to right, #ffe6e6, #fff5f5);
+      padding: 2rem 1rem 1rem;
       text-align: center;
       border-bottom: 3px solid #8b0000;
     }
@@ -23,6 +23,7 @@
     header h1 {
       margin-bottom: 0.5rem;
       color: #8b0000;
+      font-size: 2rem;
     }
 
     header p {
@@ -41,19 +42,76 @@
       width: 100%;
       height: 180px;
       object-fit: cover;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
     }
+
+    .gallery img:hover {
+      transform: scale(1.05);
+    }
+
+    .gallery {
+  display: flex;
+  overflow-x: auto;
+  gap: 1rem;
+  padding: 1rem;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
+
+.gallery::-webkit-scrollbar {
+  display: none; /* hide scrollbar */
+}
+
+.gallery img {
+  flex: 0 0 auto;
+  width: 160px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 8px;
+  transition: transform 0.3s, scale 0.3s, box-shadow 0.3s;
+  scroll-snap-align: center;
+  opacity: 0.7;
+}
+
+.gallery img:hover,
+.gallery img:active {
+  transform: scale(1.15);
+  opacity: 1;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+}
+
+.gallery img:focus-visible,
+.gallery img.selected {
+  transform: scale(1.3);
+  opacity: 1;
+  box-shadow: 0 0 20px rgba(0,0,0,0.3);
+  z-index: 2;
+}
 
     .article-section {
       padding: 2rem;
       background: #fff;
       line-height: 1.8;
+      max-width: 900px;
+      margin: auto;
     }
 
     .article-section h2 {
       color: #8b0000;
-      margin-bottom: 1rem;
+      margin-top: 1.5rem;
+    }
+
+    .article-section p {
+      text-align: justify;
+    }
+
+    .seo-tags {
+      background: #fff7f7;
+      padding: 1rem;
+      margin-top: 2rem;
+      border-left: 4px solid #8b0000;
     }
 
     .footer {
@@ -66,47 +124,45 @@
   </style>
 </head>
 <body>
-
   <header>
-    <h1>🌸 Nag Panchami 2025 | सावन स्पेशल गैलरी 🌧️</h1>
+    <h1>🌸 Nag Panchami 2025 | सावन स्पेशल गैलरी ☂️</h1>
     <p>पवित्र नाग पंचमी पर सुंदर चित्र और संपूर्ण जानकारी</p>
   </header>
 
   <section class="gallery">
-    <img src="https://i.pinimg.com/736x/f6/80/3c/f6803c7db522f074ec4458a0562d362d.jpg" alt="Nag Panchami Image 1">
-    <img src="https://i.pinimg.com/736x/44/f9/46/44f946d1642b8ccdd154c0888e7b6432.jpg" alt="Nag Panchami Image 2">
-    <img src="https://i.pinimg.com/1200x/83/d5/f5/83d5f5ad0e711612e66dd3173dedabce.jpg" alt="Nag Panchami Image 3">
-    <img src="https://i.pinimg.com/1200x/6c/fe/9b/6cfe9b64f7eb2cd571a425957490e14e.jpg" alt="Nag Panchami Image 4">
-    <img src="https://i.pinimg.com/736x/bf/12/9a/bf129af69ffbbaee5c793db7b9e49d8b.jpg" alt="Nag Panchami Image 5">
-    <img src="https://i.pinimg.com/736x/ba/06/d9/ba06d958fbcae9914a6dfc7c724624a3.jpg" alt="Nag Panchami Image 6">
-    <img src="https://i.pinimg.com/736x/1e/31/9a/1e319abbde5700622b533dacd05fc55b.jpg" alt="Nag Panchami Image 7">
+    <img src="https://i.pinimg.com/736x/f6/80/3c/f6803c7db522f074ec4458a0562d362d.jpg" alt="Nag Panchami Image 1" class="selected">
+    <img src="https://i.pinimg.com/736x/44/f9/46/44f946d1642b8ccdd154c0888e7b6432.jpg" alt="Nag Panchami Image 2" class="selected">
+    <img src="https://i.pinimg.com/1200x/83/d5/f5/83d5f5ad0e711612e66dd3173dedabce.jpg" alt="Nag Panchami Image 3" class="selected">
+    <img src="https://i.pinimg.com/1200x/6c/fe/9b/6cfe9b64f7eb2cd571a425957490e14e.jpg" alt="Nag Panchami Image 4" class="selected">
+    <img src="https://i.pinimg.com/736x/bf/12/9a/bf129af69ffbbaee5c793db7b9e49d8b.jpg" alt="Nag Panchami Image 5" class="selected">
+    <img src="https://i.pinimg.com/736x/ba/06/d9/ba06d958fbcae9914a6dfc7c724624a3.jpg" alt="Nag Panchami Image 6" class="selected">
+    <img src="https://i.pinimg.com/736x/1e/31/9a/1e319abbde5700622b533dacd05fc55b.jpg" alt="Nag Panchami Image 7" class="selected">
   </section>
 
   <section class="article-section">
-    <h2>नाग पंचमी का महत्व और परंपरा</h2>
-    <p>
-      नाग पंचमी हिंदू धर्म का एक प्रमुख पर्व है जो सावन मास के शुक्ल पक्ष की पंचमी तिथि को मनाया जाता है। यह दिन नाग देवता की पूजा-अर्चना के लिए समर्पित होता है। भारत में नागों को देवता का रूप माना गया है और उन्हें धरती की रक्षा करने वाला माना जाता है।
-    </p>
-    <p>
-      इस दिन लोग नाग देवता की मूर्तियों या चित्रों की पूजा करते हैं, उन्हें दूध, चावल, फूल, हल्दी और कुश अर्पित करते हैं। कई स्थानों पर साँपों को साक्षात दूध पिलाया जाता है। विशेष रूप से महिलाएँ अपने परिवार की सुख-शांति और रक्षा के लिए व्रत रखती हैं।
-    </p>
-    <p>
-      सावन का महीना बारिश और हरियाली का प्रतीक होता है, और यह शिव भक्ति के लिए प्रसिद्ध है। नाग पंचमी शिव जी के गले में विराजमान नाग को भी समर्पित मानी जाती है। विशेषकर ग्रामीण क्षेत्रों में यह पर्व बहुत धूमधाम से मनाया जाता है।
-    </p>
-    <p>
-      महाराष्ट्र, उत्तर प्रदेश, बिहार और दक्षिण भारत के कई हिस्सों में इस पर्व को विशेष श्रद्धा और आस्था के साथ मनाया जाता है। मंदिरों में विशेष पूजा होती है और लोग नाग पंचमी के भजन गाते हैं।
-    </p>
-    <p>
-      धार्मिक मान्यता के अनुसार, इस दिन नागों की पूजा करने से जीवन में संकट टलते हैं, रोग-दोष समाप्त होते हैं और परिवार में सुख-समृद्धि बनी रहती है।
-    </p>
-    <h2>🔍 SEO Tags:</h2>
-    <p>
-        #NagPanchami2025 #SawanFestival #NagPanchamiImages #NagDevtaPuja #SawanSomwar #HinduFestivals2025 #SawanSpecialImages #NagPanchamiKatha #SawanMehndiDesigns #ShravanMonthPuja
+    <p>नाग पंचमी एक हिन्दू पर्व है जो नागों (साँपों) की पूजा के लिए मनाया जाता है। यह श्रावण मास की शुक्ल पक्ष की पंचमी तिथि को मनाया जाता है (आमतौर पर जुलाई या अगस्त में)। यह पर्व भारत, नेपाल और कुछ अन्य देशों में श्रद्धा और आस्था के साथ मनाया जाता है।</p>
+    
+    <h2>🐍 नाग पंचमी क्यों मनाई जाती है?</h2>
+    <p>हिन्दू धर्म में नागों को अत्यंत पवित्र और शक्तिशाली माना गया है। विशेष रूप से शेषनाग, वासुकी, तक्षक, कर्कोटक जैसे नागों का उल्लेख अनेक पुराणों और धर्मग्रंथों में है। भगवान शिव के गले में वासुकी नाग विराजमान हैं, और भगवान विष्णु शेषनाग पर शयन करते हैं।</p>
+
+    <h2>मान्यता और लोककथाएं:</h2>
+    <p>एक कथा के अनुसार, एक किसान के बेटे ने गलती से नाग के बच्चों को मार दिया था। बदले में नाग ने उसके पूरे परिवार को डस लिया। पंचमी के दिन जब उस किसान की बहू ने दूध और पूजा से नाग को प्रसन्न किया, तो नाग ने सभी को जीवित कर दिया। तभी से इस दिन नागों को पूजा कर उन्हें दूध अर्पित करने की परंपरा है।</p>
+    <p>एक अन्य मान्यता के अनुसार, महाभारत काल में जनमेजय द्वारा नाग यज्ञ कराया गया था, जिससे सर्प वंश का नाश होने लगा। तब आस्तिक ऋषि ने उस यज्ञ को रोका और नागों की रक्षा की। उसी दिन को नाग पंचमी के रूप में मनाया जाता है।</p>
+
+    <h2>प्राकृतिक कारण:</h2>
+    <p>यह पर्व वर्षा ऋतु में आता है जब साँप अपने बिलों से बाहर निकलते हैं। यह उन्हें सम्मान और शांति से जीने देने का प्रतीक है। लोग मानते हैं कि इस दिन नागों को पूजा करने से वे क्रोधित नहीं होते और अपने घर की रक्षा करते हैं।</p>
+
+    <h2>🙏 नाग पंचमी पर क्या किया जाता है?</h2>
+    <p>नागों की मिट्टी या चाँदी की मूर्ति बनाकर या दीवार पर चित्र बनाकर उनकी पूजा की जाती है। दूध, लड्डू, फूल, कुशा और दूर्वा चढ़ाई जाती है। कुछ लोग साँपों को ज़मीन पर दूध पिलाते हैं (हालाँकि यह व्यवहारिक रूप से साँपों के लिए सही नहीं है)। व्रत रखकर पूजा करने से संतान सुख, भय नाश और सुख-शांति की प्राप्ति मानी जाती है।</p>
+
+    <div class="seo-tags">
+      <strong>🔍 SEO Tags:</strong><br>
+      #NagPanchami2025 #SawanFestival #NagPanchamiImages #NagDevtaPuja #SawanSomwar #HinduFestivals2025 #SawanSpecialImages #NagPanchamiKatha #SawanMehndiDesigns #ShravanMonthPuja
+    </div>
   </section>
 
   <footer class="footer">
     © 2025 Nag Panchami Gallery | Designed for Sawan Festival 🌿
   </footer>
-
 </body>
 </html>
