Update Nag Panchami aur Sawan special.html

--- a/Nag Panchami aur Sawan special.html
+++ b/Nag Panchami aur Sawan special.html
@@ -154,6 +154,42 @@
 
     <h2>🙏 नाग पंचमी पर क्या किया जाता है?</h2>
     <p>नागों की मिट्टी या चाँदी की मूर्ति बनाकर या दीवार पर चित्र बनाकर उनकी पूजा की जाती है। दूध, लड्डू, फूल, कुशा और दूर्वा चढ़ाई जाती है। कुछ लोग साँपों को ज़मीन पर दूध पिलाते हैं (हालाँकि यह व्यवहारिक रूप से साँपों के लिए सही नहीं है)। व्रत रखकर पूजा करने से संतान सुख, भय नाश और सुख-शांति की प्राप्ति मानी जाती है।</p>
+<section class="article-section">
+  <h2>🛐 नाग पंचमी की पूजा विधि</h2>
+
+  <h3>🌅 प्रातः तैयारी</h3>
+  <p>स्नान करके स्वच्छ वस्त्र पहनें।</p>
+  <p>घर के पूजन स्थल या दीवार पर गोबर से नाग देवता की आकृति बनाएं या नाग की तस्वीर रखें।</p>
+  <p>नाग देवता के लिए एक थाली में दूध, चावल, कुशा (एक प्रकार की घास), दूर्वा (तीन-पत्ती वाली घास), फूल और हल्दी-चावल रखें।</p>
+
+  <h3>🙏 पूजन विधि</h3>
+  <p>नाग देवता का ध्यान करें – <strong>“ॐ नमः सर्पेभ्यः”</strong></p>
+  <ul>
+    <li>नाग देवता की मूर्ति या चित्र पर फूल चढ़ाएं 🌸</li>
+    <li>अक्षत (चावल) अर्पित करें</li>
+    <li>दूध या चावल से बना खीर अर्पित करें 🥛</li>
+    <li>कुशा और दूर्वा अर्पित करें 🌿</li>
+    <li>धूप, दीप दिखाएं और नाग पंचमी व्रत कथा सुनें।</li>
+  </ul>
+
+  <h3>🤲 व्रत का संकल्प</h3>
+  <p>जो व्यक्ति व्रत रखते हैं वे दिनभर फलाहार करते हैं और सर्पों को दूध अर्पण करते हैं (हालांकि जीवित साँपों को दूध देना आज के वैज्ञानिक दृष्टिकोण से सही नहीं माना जाता)।</p>
+  <p>कुछ स्थानों पर इस दिन साँपों को पकड़कर उन्हें दूध पिलाया जाता है और फिर उन्हें जंगल में छोड़ दिया जाता है।</p>
+
+  <h3>📜 नाग पंचमी की कथा (लोकप्रचलित)</h3>
+  <p>एक बार की बात है, एक किसान था जिसके तीन बेटे थे। एक दिन उसका छोटा बेटा खेत जोत रहा था। हल चलाते समय उसने गलती से नाग के तीन बच्चों को मार डाला।</p>
+  <p>उस रात उनकी माँ नागिन आई और क्रोधित होकर किसान और उसके परिवार को डस लिया। पूरा परिवार मर गया, बस किसान की छोटी बहू बची।</p>
+  <p>छोटी बहू ने जब यह जाना, तो उसने पंचमी तिथि को नाग माता की पूजा की। उसने दूध, लड्डू, और फूल अर्पित किए और क्षमा माँगी।</p>
+  <p>नागिन प्रसन्न हो गई और बोली – "तुमने सच्चे मन से पूजा की है, मैं तुम्हारे परिवार को जीवनदान देती हूँ।"</p>
+  <p>नागिन ने किसान, उसकी पत्नी और बेटों को जीवित कर दिया। तभी से यह दिन नागों की पूजा के लिए शुभ माना जाता है।</p>
+
+  <h3>✨ नाग पंचमी के लाभ और महत्व</h3>
+  <ul>
+    <li>सांप के डर से मुक्ति मिलती है।</li>
+    <li>सर्पदोष, कालसर्प योग आदि के कष्टों का निवारण होता है।</li>
+    <li>संतान सुख, लंबी उम्र और पारिवारिक सुरक्षा की प्राप्ति होती है।</li>
+  </ul>
+</section>
 
     <div class="seo-tags">
       <strong>🔍 SEO Tags:</strong><br>
