Update Nag Panchami aur Sawan special.html

--- a/Nag Panchami aur Sawan special.html
+++ b/Nag Panchami aur Sawan special.html
@@ -4,6 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nag Panchami 2025 | Sawan Special Photo Gallery & Article</title>
+  <!-- ✅ SEO Meta Tags for Nag Panchami Page -->
+<meta name="description" content="Nag Panchami 2025 special photo gallery, puja vidhi, vrat katha, mantras, aarti and complete rituals in Hindi. Celebrate Sawan with devotion and tradition." />
+<meta name="keywords" content="Nag Panchami 2025, Nag Panchami puja vidhi, Nag Panchami photo gallery, Sawan special festival, Nag Panchami vrat katha, Nag Panchami aarti, नाग पंचमी आरती, सावन नाग पूजा, नाग देवता की पूजा, नाग पंचमी के मंत्र, कालसर्प दोष पूजा, नाग देवता आरती हिंदी में, Nag Devta mantra, nag panchami ki kahani, snake worship, sheshnag, vasuki, nag panchami importance, नाग पंचमी का महत्व, नाग पंचमी की विधि, nag panchami katha, nag panchami vrat, nag panchami in india, nag panchami celebration, nag panchami festival, nag panchami rituals, nag panchami puja items, sawan ke tyohar, hindu festival 2025, nag panchami kab hai, nag panchami puja samagri, nag panchami in hindi, nag panchami hindu calendar, nag panchami vrat vidhi, nag panchami vrat katha in hindi, nag panchami traditional pooja, nag panchami par kya kare, nag devta ke mantra, nag devta ke photo, nag panchami pratha, nag panchami vrat kathayein" />
+<meta name="author" content="LudoGroupLink.com" />
+<meta name="robots" content="index, follow" />
+<meta name="language" content="Hindi" />
+<meta name="revisit-after" content="3 days" />
+<meta name="distribution" content="global" />
+<meta name="rating" content="general" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta property="og:title" content="Nag Panchami 2025 - Sawan Festival, Puja, Gallery, Aarti & Katha" />
+<meta property="og:description" content="Celebrate Nag Panchami 2025 with images, rituals, mantras, and stories. A complete guide to worshiping Nag Devta during Sawan." />
+<meta property="og:image" content="https://i.pinimg.com/736x/f6/80/3c/f6803c7db522f074ec4458a0562d362d.jpg" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.ludogrouplink.com/nag-panchami.html" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Nag Panchami 2025 - Mantras, Aarti, Katha, Photo Gallery" />
+<meta name="twitter:description" content="Complete Nag Panchami 2025 coverage with puja vidhi, vrat katha, mantras, and devotional images in Hindi." />
+<meta name="twitter:image" content="https://i.pinimg.com/736x/44/f9/46/44f946d1642b8ccdd154c0888e7b6432.jpg" />
+
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -189,13 +209,68 @@
     <li>सर्पदोष, कालसर्प योग आदि के कष्टों का निवारण होता है।</li>
     <li>संतान सुख, लंबी उम्र और पारिवारिक सुरक्षा की प्राप्ति होती है।</li>
   </ul>
+  <section class="article-section">
+  <h2>🕉️ नाग पंचमी मंत्र</h2>
+  <p><strong>इन मंत्रों का जाप पूजा के समय 11 या 21 बार करें:</strong></p>
+
+  <pre style="background:#f9f9f9;padding:1rem;border-left:4px solid #8b0000;font-size:1.05rem;line-height:1.8;">
+ॐ नमः सर्पेभ्यः  
+ॐ सर्वे सर्पा: शान्तिं कुर्युः।  
+ॐ वासुकये नमः।  
+ॐ अनन्ताय नमः।  
+ॐ तक्षकाय नमः।  
+ॐ कर्कोटकाय नमः।  
+ॐ शंखपालाय नमः।  
+ॐ पद्मनाभाय नमः।
+  </pre>
+
+  <h2>🔥 नाग देवता की आरती</h2>
+  <p><strong>आरती नाग देवता की:</strong></p>
+
+  <pre style="background:#fff8e1;padding:1rem;border-left:4px solid #ff9800;font-size:1.05rem;line-height:1.8;">
+जय नागराज, जय नागराजा।  
+भक्तों के तुम हो रखवाला।।  
+
+दूध चढ़ाएँ, पूजन करें,  
+भक्त तुम्हारे दर्शन करें।  
+दूर करो सब संकट राजा,  
+रक्षा करो नागराजा।।  
+
+शेषनाग जिनके आसन,  
+जिन पर विष्णु करें विश्राम।  
+उनका स्मरण करें जो भी,  
+पाएं अक्षय पुण्यधाम।।  
+
+साँपों के तुम हो स्वामी,  
+धरती का करते हो काम।  
+विष से रक्षा करते सबकी,  
+तुम हो भगवन महा बलवान।।  
+
+आरती जो तेरी गाए,  
+सदा सुख-शांति वह पाए।  
+मनोकामना उसकी पूरी हो,  
+दुख-दारिद्र्य कभी ना आए।।
+  </pre>
+
+  <h3>🙏 विशेष संकेत:</h3>
+  <ul>
+    <li>आरती के बाद <strong>कर्पूर (कपूर)</strong> जलाकर <strong>प्रदक्षिणा</strong> करें।</li>
+    <li>प्रसाद में <strong>दूध, लड्डू</strong> या <strong>खीर</strong> वितरित करें।</li>
+  </ul>
+</section>
+
 </section>
 
     <div class="seo-tags">
       <strong>🔍 SEO Tags:</strong><br>
       #NagPanchami2025 #SawanFestival #NagPanchamiImages #NagDevtaPuja #SawanSomwar #HinduFestivals2025 #SawanSpecialImages #NagPanchamiKatha #SawanMehndiDesigns #ShravanMonthPuja
     </div>
+     <div class="seo-keywords" style="display:none;">
+  नाग पंचमी 2025, नाग पंचमी पूजा विधि, नाग पंचमी फोटो गैलरी, नाग पंचमी व्रत कथा, नाग पंचमी आरती, नाग पंचमी मंत्र, सावन में नाग पूजा, नाग देवता की पूजा, नाग पंचमी की कहानी, कालसर्प दोष से मुक्ति, शेषनाग पूजा, वासुकी पूजा, तक्षक पूजा, नागपंचमी कब है, नाग पंचमी त्यौहार, सावन सोमवार के पर्व, नाग पंचमी का महत्व, नाग देवता आरती, नाग पंचमी का इतिहास, नाग पंचमी पर कथा, नाग पूजा सामग्री, नाग पंचमी पर व्रत, नाग पंचमी 2025 तारीख, नाग पंचमी कैसे मनाएं, नाग पंचमी क्यों मनाते हैं, नाग पंचमी का व्रत कैसे करें, नाग पंचमी विशेष पूजा, नाग पंचमी और शिव भक्ति, नाग पंचमी सावन मास, नाग देवता के मंत्र, नाग पंचमी कथा हिंदी में, हिन्दू धर्म में नाग पूजा, नाग पंचमी के फायदे, नाग पंचमी का लाभ, नाग पंचमी की परंपरा, नाग पंचमी व्रत लाभ, नाग पंचमी सम्पूर्ण पूजा, नाग पंचमी का उत्सव, नाग देवता की महिमा, नाग पंचमी आरती lyrics, नाग पंचमी की तैयारी, नाग पूजा कब करें, नाग पंचमी पर्व का महत्व, नाग पंचमी की विधि, snake worship in hinduism, nag panchami rituals, nag devta bhajan, snake god worship india, nag panchami vrat katha, nag panchami puja mantra, hindu festivals 2025, nag chaturthi.
+</div>
   </section>
+ 
+
 
   <footer class="footer">
     © 2025 Nag Panchami Gallery | Designed for Sawan Festival 🌿
