Update Nag Panchami aur Sawan special.html

--- a/Nag Panchami aur Sawan special.html
+++ b/Nag Panchami aur Sawan special.html
@@ -23,6 +23,67 @@
 <meta name="twitter:title" content="Nag Panchami 2025 - Mantras, Aarti, Katha, Photo Gallery" />
 <meta name="twitter:description" content="Complete Nag Panchami 2025 coverage with puja vidhi, vrat katha, mantras, and devotional images in Hindi." />
 <meta name="twitter:image" content="https://i.pinimg.com/736x/44/f9/46/44f946d1642b8ccdd154c0888e7b6432.jpg" />
+<!DOCTYPE html>
+<html lang="hi">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nag Panchami 2025 - नाग पंचमी पूजा विधि, व्रत कथा, मंत्र और आरती | Ludogrouplink</title>
+
+  <!-- ✅ SEO Meta Tags -->
+  <meta name="description" content="नाग पंचमी 2025 पर जानिए पूजा विधि, आरती, मंत्र, कथा और सावन में नाग देवता की महिमा। संपूर्ण जानकारी के लिए पढ़ें हमारा Nag Panchami Special पेज।" />
+  <meta name="keywords" content="nag panchami 2025, नाग पंचमी पूजा विधि, नाग पंचमी व्रत कथा, नाग पंचमी आरती, नाग देवता की पूजा, कालसर्प दोष मुक्ति, सावन में नाग पूजा, नाग पंचमी का महत्व, नाग देवता मंत्र, snake worship in hinduism, nag panchami rituals, nag panchami festival, nag panchami vrat" />
+  <meta name="author" content="LudoGroupLink.com" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="Hindi" />
+
+  <!-- ✅ Favicon -->
+  <link rel="icon" href="/images/nagpanchami-favicon.png" type="image/png" />
+    <!-- ✅ Google AdSense Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
+     crossorigin="anonymous"></script>
+  <!-- ✅ Google Site Verification -->
+  <meta name="google-site-verification" content="google-site-verification-code-here" />
+
+  <!-- ✅ Open Graph for Social Sharing -->
+  <meta property="og:title" content="Nag Panchami 2025 - नाग पंचमी पूजा विधि, आरती और कथा" />
+  <meta property="og:description" content="नाग पंचमी 2025 विशेष पेज: जानें पूजा विधि, मंत्र, कथा और आरती | कालसर्प दोष से मुक्ति, नाग देवता की महिमा और अधिक जानकारी।" />
+  <meta property="og:image" content="https://ludogrouplink.com/images/nagpanchami-banner.jpg" />
+  <meta property="og:url" content="https://ludogrouplink.com/nagpanchami-2025.html" />
+  <meta property="og:type" content="article" />
+
+  <!-- ✅ Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Nag Panchami 2025 - नाग पंचमी व्रत, कथा और मंत्र" />
+  <meta name="twitter:description" content="पूजा विधि, कथा, आरती और मंत्र सहित नाग पंचमी की पूरी जानकारी हिंदी में।" />
+  <meta name="twitter:image" content="https://ludogrouplink.com/images/nagpanchami-banner.jpg" />
+
+  <!-- ✅ JSON-LD Schema Markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Nag Panchami 2025 - पूजा विधि, कथा, मंत्र",
+    "url": "https://ludogrouplink.com/nagpanchami-2025.html",
+    "description": "Nag Panchami 2025 विशेष जानकारी: पूजा विधि, आरती, मंत्र, व्रत कथा, और नाग देवता की पूजा के लाभ।",
+    "inLanguage": "hi",
+    "publisher": {
+      "@type": "Organization",
+      "name": "LudoGroupLink.com",
+      "url": "https://ludogrouplink.com",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://ludogrouplink.com/images/logo.png"
+      }
+    }
+  }
+  </script>
+
+  <!-- ✅ Hidden SEO Keywords -->
+  <div class="seo-keywords" style="display:none;">
+    #नाग_पंचमी_2025, #नाग_पंचमी_पूजा_विधि, #नाग_पंचमी_आरती, #नाग_देवता_मंत्र, #नाग_पंचमी_व्रत_कथा, #कालसर्प_दोष_मुक्ति, #सावन_में_नाग_पूजा, #हिंदू_त्यौहार, #Nag_Panchami_Rituals, #Nag_Panchami_Puja, #Snake_God_Worship, #Nag_Panchami_Story, #Nag_Panchami_Special, #Nag_Chaturthi, #Nag_Panchami_Mythology, #Snake_Worship_India, #Nag_Devta_Puja, #Nag_Panchami_Aarti, #Nag_Panchami_Festival, #Savan_Festival, #Nag_Puja_Samagri, #Nag_Panchami_Importance, #Nag_Panchami_Katha, #Vrat_Katha_Nag_Panchami, #Nag_Panchami_Benefits, #Sheshnag_Puja, #Vasuki_Nag_Mantra, #Nag_Panchami_Customs, #Snake_Milk_Puja, #Nag_Panchami_Images, #Nag_Panchami_Celebration, #Nag_Panchami_History, #Nag_Panchami_Vrat_Vidhi, #Nag_Panchami_Puja_Time, #Nag_Panchami_Date_2025, #Nag_Panchami_in_Hinduism, #Nag_Devta_Bhajan, #Nag_Panchami_Hindi, #Nag_Panchami_Snake_Worship, #Nag_Panchami_Ritual_Steps, #Nag_Panchami_Vrat_Katha_in_Hindi, #Nag_Panchami_Aarti_Lyrics, #Nag_Panchami_Puja_Materials, #Nag_Panchami_and_Shiv_Bhakti, #Nag_Panchami_Tips, #Nag_Panchami_Gallery, #Nag_Panchami_Songs
+  </div>
+</head>
 
   <style>
     body {
