--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
   <!-- Favicon -->
   <link rel="icon" href="/WhatsApp%20Image%202025-07-27%20at%2010.45.50.jpeg" type="image/jpeg" />
-
+    <!-- ✅ Google AdSense Code -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5367610923397725"
+     crossorigin="anonymous"></script>
+  
   <!-- Google Site Verification -->
   <meta name="google-site-verification" content="google-site-verification-code-here" />
 
