--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@ footer a:hover {
     <div class="container">
         <h1>Ludo Group Link</h1>
         <p class="intro-text">
-          <h1  क्या आप अपने लूडो ग्रुप को हमारी वेबसाइट पर दिखाना चाहते है? ></h1><br>
+          <h1> क्या आप अपने लूडो ग्रुप को हमारी वेबसाइट पर दिखाना चाहते है? </h1><br>
             यदि आप अपने लूडो ग्रुप को हमारी वेबसाइट <strong>लूडो ग्रुप लिंक</strong> पर दिखना चाहते हैं तो आपके लूडो ग्रुप में अधिक सदस्य शामिल हो सकते हैं। अपने लूडो ग्रुप को हमारी साइट पर दिखाने के लिए नीचे दिए गए फार्म को भरें और <strong>Submit</strong> बटन पर क्लिक करें ताकि लूडो प्लेयर आपके ग्रुप को गूगल पर सर्च कर सके और ज्वाइन कर सके!
         </p>
 
