--- a/home.html
+++ b/home.html
@@ -6,7 +6,55 @@
     <link rel="stylesheet" href="styles.css">
   <style>
   body 
-      
+       * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    header {
+      background: linear-gradient(135deg, #ff4e50, #f9d423);
+      padding: 30px 20px;
+      text-align: center;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+      position: relative;
+      animation: slideDown 0.8s ease-out;
+    }
+
+    header h1 {
+      font-size: 3rem;
+      color: white;
+      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+      animation: glow 2s ease-in-out infinite alternate;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    @keyframes slideDown {
+      from {
+        transform: translateY(-100%);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    @keyframes glow {
+      0% {
+        text-shadow: 0 0 10px #fff, 0 0 20px #f9d423;
+      }
+      100% {
+        text-shadow: 0 0 20px #fff, 0 0 40px #ff4e50;
+      }
+    }
+
+    /* Responsive for small screens */
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+    }
       }
       margin: 0;
       padding: 0;
