--- a/home.html
+++ b/home.html
@@ -6,6 +6,65 @@
     <link rel="stylesheet" href="styles.css">
   <style>
   body 
+           margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f2f2f2;
+    }
+
+    header {
+      background: white;
+      padding: 50px 0;
+      border-bottom: 8px solid transparent;
+      border-image: linear-gradient(to right, #ff4e50, #f9d423);
+      border-image-slice: 1;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
+      text-align: center;
+      position: relative;
+    }
+
+    .animated-title {
+      display: inline-block;
+      font-size: 2.8rem;
+      font-weight: bold;
+      color: #333;
+      overflow: hidden;
+    }
+
+    .animated-title span {
+      display: inline-block;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: typewriter 0.6s forwards;
+    }
+
+    /* Animate each letter with delay */
+    .animated-title span:nth-child(1) { animation-delay: 0.1s; }
+    .animated-title span:nth-child(2) { animation-delay: 0.2s; }
+    .animated-title span:nth-child(3) { animation-delay: 0.3s; }
+    .animated-title span:nth-child(4) { animation-delay: 0.4s; }
+    .animated-title span:nth-child(5) { animation-delay: 0.5s; }
+    .animated-title span:nth-child(6) { animation-delay: 0.6s; }
+    .animated-title span:nth-child(7) { animation-delay: 0.7s; }
+    .animated-title span:nth-child(8) { animation-delay: 0.8s; }
+    .animated-title span:nth-child(9) { animation-delay: 0.9s; }
+    .animated-title span:nth-child(10) { animation-delay: 1.0s; }
+    .animated-title span:nth-child(11) { animation-delay: 1.1s; }
+    .animated-title span:nth-child(12) { animation-delay: 1.2s; }
+    .animated-title span:nth-child(13) { animation-delay: 1.3s; }
+    .animated-title span:nth-child(14) { animation-delay: 1.4s; }
+
+    @keyframes typewriter {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @media (max-width: 600px) {
+      .animated-title {
+        font-size: 1.8rem;
+      }
+    }
        * {
       margin: 0;
       padding: 0;
@@ -192,7 +251,16 @@ footer a:hover {
 </style>
 </head>
 <body>
-
+<header>
+    <h1 class="animated-title">
+      <!-- Title broken into characters -->
+      <span>L</span><span>u</span><span>d</span><span>o</span>
+      <span>&nbsp;</span>
+      <span>G</span><span>r</span><span>o</span><span>u</span><span>p</span>
+      <span>&nbsp;</span>
+      <span>L</span><span>i</span><span>n</span><span>k</span>
+    </h1>
+  </header>
     <div class="container">
         <h1>Ludo Group Link</h1>
         <p class="intro-text">
