--- a/home.html
+++ b/home.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-    <meta charset="UTF-8">
-    <title>Ludo Group Link</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Ludo Group Link</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-  body 
-           margin: 0;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f2f2f2;
     }
@@ -19,7 +24,6 @@
       border-image-slice: 1;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
       text-align: center;
-      position: relative;
     }
 
     .animated-title {
@@ -37,21 +41,22 @@
       animation: typewriter 0.6s forwards;
     }
 
-    /* Animate each letter with delay */
-    .animated-title span:nth-child(1) { animation-delay: 0.1s; }
-    .animated-title span:nth-child(2) { animation-delay: 0.2s; }
-    .animated-title span:nth-child(3) { animation-delay: 0.3s; }
-    .animated-title span:nth-child(4) { animation-delay: 0.4s; }
-    .animated-title span:nth-child(5) { animation-delay: 0.5s; }
-    .animated-title span:nth-child(6) { animation-delay: 0.6s; }
-    .animated-title span:nth-child(7) { animation-delay: 0.7s; }
-    .animated-title span:nth-child(8) { animation-delay: 0.8s; }
-    .animated-title span:nth-child(9) { animation-delay: 0.9s; }
+    /* Animate each letter with increasing delay */
+    .animated-title span:nth-child(1)  { animation-delay: 0.1s; }
+    .animated-title span:nth-child(2)  { animation-delay: 0.2s; }
+    .animated-title span:nth-child(3)  { animation-delay: 0.3s; }
+    .animated-title span:nth-child(4)  { animation-delay: 0.4s; }
+    .animated-title span:nth-child(5)  { animation-delay: 0.5s; }
+    .animated-title span:nth-child(6)  { animation-delay: 0.6s; }
+    .animated-title span:nth-child(7)  { animation-delay: 0.7s; }
+    .animated-title span:nth-child(8)  { animation-delay: 0.8s; }
+    .animated-title span:nth-child(9)  { animation-delay: 0.9s; }
     .animated-title span:nth-child(10) { animation-delay: 1.0s; }
     .animated-title span:nth-child(11) { animation-delay: 1.1s; }
     .animated-title span:nth-child(12) { animation-delay: 1.2s; }
     .animated-title span:nth-child(13) { animation-delay: 1.3s; }
     .animated-title span:nth-child(14) { animation-delay: 1.4s; }
+    .animated-title span:nth-child(15) { animation-delay: 1.5s; }
 
     @keyframes typewriter {
       to {
@@ -65,195 +70,101 @@
         font-size: 1.8rem;
       }
     }
-       * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+
+    .container {
+      max-width: 800px;
+      margin: 30px auto;
+      background: #fff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
     }
 
-    header {
-      background: linear-gradient(135deg, #ff4e50, #f9d423);
-      padding: 30px 20px;
+    .container h1 {
+      color: #e91e63;
       text-align: center;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-      position: relative;
-      animation: slideDown 0.8s ease-out;
+      margin-bottom: 20px;
     }
 
-    header h1 {
-      font-size: 3rem;
-      color: white;
-      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-      animation: glow 2s ease-in-out infinite alternate;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    .intro-text {
+      font-size: 16px;
+      line-height: 1.6;
+      margin-bottom: 25px;
     }
 
-    @keyframes slideDown {
-      from {
-        transform: translateY(-100%);
-        opacity: 0;
-      }
-      to {
-        transform: translateY(0);
-        opacity: 1;
-      }
-    }
-
-    @keyframes glow {
-      0% {
-        text-shadow: 0 0 10px #fff, 0 0 20px #f9d423;
-      }
-      100% {
-        text-shadow: 0 0 20px #fff, 0 0 40px #ff4e50;
-      }
-    }
-
-    /* Responsive for small screens */
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 2rem;
-      }
-    }
-      }
-      margin: 0;
-      padding: 0;
-      background: #f2f2f2;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    .form {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-{
-    font-family: Arial, sans-serif;
-    background: #f4f4f4;
-    margin: 0;
-    padding: 0;
-}
-
-.container {
-    max-width: 800px;
-    margin: 30px auto;
-    background: #fff;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-    color: #e91e63;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.intro-text {
-    font-size: 16px;
-    line-height: 1.6;
-    margin-bottom: 25px;
-}
-
-.form {
-    display: flex;
-    flex-direction: column;
-}
-
-label {
-    margin: 10px 0 5px;
-    font-weight: bold;
-}
-
-input[type="text"],
-input[type="tel"],
-input[type="email"],
-input[type="url"],
-textarea,
-input[type="file"] {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    font-size: 14px;
-}
-
-textarea {
-    resize: vertical;
-}
-
-button {
-    margin-top: 20px;
-    background: #e91e63;
-    color: white;
-    border: none;
-    padding: 12px;
-    font-size: 16px;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: background 0.3s ease;
-}
-
-button:hover {
-    background: #c2185b;
-}
-
-.contact-info {
-    margin-top: 30px;
-    background: #fce4ec;
-    padding: 15px;
-    border-left: 5px solid #e91e63;
-    border-radius: 6px;
-    font-size: 14px;
-}
-
-footer {
-    margin-top: 30px;
-    text-align: center;
-    font-size: 14px;
-}
-
-footer a {
-    color: #e91e63;
-    text-decoration: none;
-    margin: 0 5px;
-}
-
-footer a:hover {
-    text-decoration: underline;
-
-    h1 {
-      font-size: 3rem;
-      color: #fff;
-      background: linear-gradient(135deg, #ff4e50, #f9d423);
-      padding: 20px 40px;
-      border-radius: 15px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-      animation: popIn 1s ease-out, glow 2s infinite alternate;
-      text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+      flex-direction: column;
     }
 
-    @keyframes popIn {
-      0% {
-        transform: scale(0.5);
-        opacity: 0;
-      }
-      100% {
-        transform: scale(1);
-        opacity: 1;
-      }
+    label {
+      margin: 10px 0 5px;
+      font-weight: bold;
     }
 
-    @keyframes glow {
-      0% {
-        box-shadow: 0 0 15px rgba(255, 78, 80, 0.6);
-      }
-      100% {
-        box-shadow: 0 0 30px rgba(249, 212, 35, 0.9);
-      }
+    input[type="text"],
+    input[type="tel"],
+    input[type="email"],
+    input[type="url"],
+    textarea,
+    input[type="file"] {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 14px;
     }
-</style>
+
+    textarea {
+      resize: vertical;
+    }
+
+    button {
+      margin-top: 20px;
+      background: #e91e63;
+      color: white;
+      border: none;
+      padding: 12px;
+      font-size: 16px;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background: #c2185b;
+    }
+
+    .contact-info {
+      margin-top: 30px;
+      background: #fce4ec;
+      padding: 15px;
+      border-left: 5px solid #e91e63;
+      border-radius: 6px;
+      font-size: 14px;
+    }
+
+    footer {
+      margin-top: 30px;
+      text-align: center;
+      font-size: 14px;
+    }
+
+    footer a {
+      color: #e91e63;
+      text-decoration: none;
+      margin: 0 5px;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-<header>
+
+  <!-- HEADER -->
+  <header>
     <h1 class="animated-title">
-      <!-- Title broken into characters -->
       <span>L</span><span>u</span><span>d</span><span>o</span>
       <span>&nbsp;</span>
       <span>G</span><span>r</span><span>o</span><span>u</span><span>p</span>
@@ -261,52 +172,53 @@ footer a:hover {
       <span>L</span><span>i</span><span>n</span><span>k</span>
     </h1>
   </header>
-    <div class="container">
-        <h1>Ludo Group Link</h1>
-        <p class="intro-text">
-          <h1> क्या आप अपने लूडो ग्रुप को हमारी वेबसाइट पर दिखाना चाहते है? </h1><br>
-            यदि आप अपने लूडो ग्रुप को हमारी वेबसाइट <strong>लूडो ग्रुप लिंक</strong> पर दिखना चाहते हैं तो आपके लूडो ग्रुप में अधिक सदस्य शामिल हो सकते हैं। अपने लूडो ग्रुप को हमारी साइट पर दिखाने के लिए नीचे दिए गए फार्म को भरें और <strong>Submit</strong> बटन पर क्लिक करें ताकि लूडो प्लेयर आपके ग्रुप को गूगल पर सर्च कर सके और ज्वाइन कर सके!
-        </p>
 
-        <form class="form">
-            <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Enter Your Name" required>
+  <!-- CONTENT -->
+  <div class="container">
+    <h1>क्या आप अपने लूडो ग्रुप को हमारी वेबसाइट पर दिखाना चाहते हैं?</h1>
+    <p class="intro-text">
+      यदि आप अपने लूडो ग्रुप को हमारी वेबसाइट <strong>लूडो ग्रुप लिंक</strong> पर दिखाना चाहते हैं तो आपके ग्रुप में अधिक सदस्य शामिल हो सकते हैं।<br>
+      नीचे दिए गए फॉर्म को भरें और <strong>Submit</strong> पर क्लिक करें ताकि लूडो प्लेयर आपके ग्रुप को गूगल पर सर्च करके ज्वाइन कर सकें!
+    </p>
 
-            <label for="number">Number</label>
-            <input type="tel" id="number" placeholder="Enter Your Calling Number" required>
+    <form class="form">
+      <label for="name">Name</label>
+      <input type="text" id="name" placeholder="Enter Your Name" required>
 
-            <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Enter Your Email Id" required>
+      <label for="number">Number</label>
+      <input type="tel" id="number" placeholder="Enter Your Calling Number" required>
 
-            <label for="groupName">Group Name</label>
-            <input type="text" id="groupName" placeholder="Enter Your Group Name" required>
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="Enter Your Email Id" required>
 
-            <label for="groupLink">Group Link</label>
-            <input type="url" id="groupLink" placeholder="Enter Your Group Link" required>
+      <label for="groupName">Group Name</label>
+      <input type="text" id="groupName" placeholder="Enter Your Group Name" required>
 
-            <label for="rules">Group Rules</label>
-            <textarea id="rules" rows="4" placeholder="Type Here Your Group Rules..." required></textarea>
+      <label for="groupLink">Group Link</label>
+      <input type="url" id="groupLink" placeholder="Enter Your Group Link" required>
 
-            <label for="dp">Upload Your Group DP (Logo)</label>
-            <input type="file" id="dp" accept="image/*">
+      <label for="rules">Group Rules</label>
+      <textarea id="rules" rows="4" placeholder="Type Here Your Group Rules..." required></textarea>
 
-            <button type="submit">Submit</button>
-        </form>
+      <label for="dp">Upload Your Group DP (Logo)</label>
+      <input type="file" id="dp" accept="image/*">
 
-        <div class="contact-info">
-            <p>आप आपके ग्रुप को हमें <strong>01169266013</strong> इस नंबर पर कॉल कर के भी ऐड करवा सकते है।</p>
-            <p>You can also get your group added by calling us on this number <strong>01169266013</strong></p>
-        </div>
+      <button type="submit">Submit</button>
+    </form>
 
-        <footer>
-            <a href="#">About Us</a> |
-            <a href="#">Contact Us</a> |
-            <a href="#">Privacy Policy</a> |
-            <a href="#">Terms & Conditions</a> |
-            <a href="#">Disclaimer</a>
-        </footer>
-
+    <div class="contact-info">
+      <p>आप अपने ग्रुप को हमें <strong>01169266013</strong> इस नंबर पर कॉल करके भी ऐड करवा सकते हैं।</p>
+      <p>You can also get your group added by calling us on this number <strong>01169266013</strong>.</p>
     </div>
+
+    <footer>
+      <a href="#">About Us</a> |
+      <a href="#">Contact Us</a> |
+      <a href="#">Privacy Policy</a> |
+      <a href="#">Terms & Conditions</a> |
+      <a href="#">Disclaimer</a>
+    </footer>
+  </div>
 
 </body>
 </html>
